--- a/Solutions/pom.xml
+++ b/Solutions/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.twisted_nematic57.aoc.java25</groupId>
-    <artifactId>Solutions</artifactId>
+    <groupId>com.github.twisted_nematic57</groupId>
+    <artifactId>SolveKit</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
